feat: user and locals crud completed, initial favorite crud initiated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/horus
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3310/horus
 spring.datasource.username=root
-spring.datasource.password=36812806mW!
+spring.datasource.password=1234!@#$
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 sprint.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
